# shindex-rust-tracer-challenge

./: .gitignore  Cargo.toml  README.md  result.ppm
PuttingItTogether/: circle.ppm  circle_default.ppm  circle_shrink_x.ppm  circle_shrink_x_and_rotate.ppm  circle_shrink_x_and_skew.ppm  clock.ppm  projectile.ppm
src/: camera.rs  canvas.rs  color.rs  cube.rs  intersection.rs  light.rs  main.rs  material.rs  matrix.rs  plane.rs  playground.rs  ray.rs  shape.rs  sphere.rs  transformation.rs  tuple.rs  util.rs  world.rs
src/math/: matrix.rs  mod.rs  transformation.rs
src/pattern/: checker.rs  gradient.rs  mod.rs  ring.rs  stripe.rs
src/playground/: circle.rs  clock.rs  mod.rs  projectile.rs  sphere.rs  sphere_advanced.rs  spheres.rs  utility.rs
src/primitives/: cone.rs  cube.rs  cylinder.rs  mod.rs  plane.rs  shape.rs  sphere.rs
src/samples/: cube_sample.rs  cylinders_sample.rs  mod.rs  refraction.rs  sequence.rs  simple_sphere_world.rs  test_one.rs  utility.rs
src/scene/: camera.rs  canvas.rs  light.rs  material.rs  mod.rs  world.rs
src/scene/rendering/: intersection.rs  mod.rs  ray.rs
src/scene/shading/: color.rs  light.rs  material.rs  mod.rs
src/scene/tracing/: intersection.rs
