[package]
name = "shindex-rust-tracer-challenge"
version = "0.1.0"
authors = ["alcyz <tobias_schindler@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.2", features = ["v4"] }

threadpool = "1.8.1"
num_cpus = "1.13.0"
chrono = "0.4.19"
